fix: chrome -> scrollbar breiter

--- a/bin/css/style.css
+++ b/bin/css/style.css
@@ -18,8 +18,8 @@ html, body {
 }
 
 ::-webkit-scrollbar {
-    height: 4px;
-    width: 4px;
+    height: 6px;
+    width: 6px;
 }
 
 ::-webkit-scrollbar-thumb {
